@@ -102,11 +102,6 @@ private:
 
 //////////////////////////////////////////////////
 
-#if defined (__GNUC__) && (__GNUC__ >= 3 || __GNUC_MINOR__ > 95) && \
-    (!defined (VXWORKS) || !(__GNUC__ == 2 && __GNUC_MINOR__ == 96))
-// This stuff only works with g++ 2.96 and later...
-// But not with VxWorks g++ 2.96.
-
 // Listing 3 code/ch03
 
 #define DEBUG_PREFIX       ACE_TEXT ("DEBUG%I")
@@ -151,7 +146,5 @@ private:
                     EMERGENCY_PREFIX \
                     X))
 // Listing 3
-
-#endif /* __GNUC__ */
 
 #endif /* TRACE_H */
