@@ -1,6 +1,8 @@
 USER VISIBLE CHANGES BETWEEN ACE-5.8.3 and ACE-6.0.0
 ====================================================
 
+. Removed GCC < 3 support
+
 USER VISIBLE CHANGES BETWEEN ACE-5.8.2 and ACE-5.8.3
 ====================================================
 
